docker file changes + different version of java